--- a/APTRGv1.csproj
+++ b/APTRGv1.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommunicationManager.cs" />
     <Compile Include="control\AirSpeedIndicatorInstrumentControl.cs">
       <SubType>Component</SubType>
     </Compile>
